.metals/metals.log
2023.03.03 18:39:16 INFO  Started: Metals version 0.11.11 in workspace '/home/brad/blog' for client Visual Studio Code 1.76.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/brad/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.03 18:39:17 INFO  time: initialize in 0.74s
2023.03.03 18:39:20 WARN  Build server is not auto-connectable.
2023.03.03 18:39:20 WARN  no build tool detected in workspace '/home/brad/blog'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.03.03 18:39:20 WARN  no build target for: /home/brad/Documents/IO/IO.scala
Mar 03, 2023 6:39:20 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 1
2023.03.03 18:39:27 INFO  no build target found for /home/brad/Documents/IO/IO.scala. Using presentation compiler with project's scala-library version: 3.2.2
2023.03.03 18:39:31 INFO  Shutting down server
2023.03.03 18:39:31 INFO  shutting down Metals
2023.03.03 18:39:31 INFO  Exiting server
2023.03.03 20:03:41 INFO  Started: Metals version 0.11.11 in workspace '/home/brad/blog' for client Visual Studio Code 1.76.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/brad/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.03 20:03:42 INFO  time: initialize in 0.6s
2023.03.03 20:03:44 WARN  Build server is not auto-connectable.
2023.03.03 20:03:44 WARN  no build tool detected in workspace '/home/brad/blog'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.03.03 20:03:44 WARN  no build target for: /home/brad/Documents/IO/IO.scala
2023.03.03 20:03:46 INFO  no build target found for /home/brad/Documents/IO/IO.scala. Using presentation compiler with project's scala-library version: 3.2.2
2023.03.03 21:08:59 INFO  Shutting down server
2023.03.03 21:08:59 INFO  shutting down Metals
2023.03.03 21:08:59 INFO  Exiting server
2023.03.10 18:01:12 INFO  Started: Metals version 0.11.11 in workspace '/home/brad/blog' for client Visual Studio Code 1.76.1.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/brad/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.10 18:01:14 INFO  time: initialize in 1.19s
2023.03.10 18:01:17 WARN  Build server is not auto-connectable.
2023.03.10 18:01:17 WARN  no build tool detected in workspace '/home/brad/blog'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.03.10 18:01:17 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:01:22 INFO  no build target found for /home/brad/blog/src/content/blog/l.scala. Using presentation compiler with project's scala-library version: 3.2.2
2023.03.10 18:01:24 INFO  time: code lens generation in 7.07s
2023.03.10 18:01:24 INFO  time: code lens generation in 7.35s
2023.03.10 18:01:24 INFO  time: code lens generation in 7.39s
Mar 10, 2023 6:04:54 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 308
2023.03.10 18:06:32 ERROR scalafmt: /home/brad/blog/src/content/blog/l.scala:8: error: [dialect scala213] ; expected but : found
):
 ^
2023.03.10 18:06:34 ERROR scalafmt: /home/brad/blog/src/content/blog/l.scala:8: error: [dialect scala213] ; expected but : found
):
 ^
2023.03.10 18:06:37 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:06:42 ERROR scalafmt: /home/brad/blog/src/content/blog/l.scala:8: error: [dialect scala213] ; expected but : found
):
 ^
2023.03.10 18:08:56 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
Mar 10, 2023 6:09:33 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 880
2023.03.10 18:10:40 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:11:03 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:11:21 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:14:00 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:14:45 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:14:45 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:15:26 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:15:29 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
2023.03.10 18:16:48 WARN  no build target for: /home/brad/blog/src/content/blog/l.scala
Mar 10, 2023 7:46:43 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Mar 10, 2023 7:46:47 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
